<?xml version="1.0" encoding="UTF-8"?>
<!--
~ Copyright (C) 2014 the original author or authors.
~
~ Licensed under the Apache License, Version 2.0 (the "License");
~ you may not use this file except in compliance with the License.
~ You may obtain a copy of the License at
~
~ http://www.apache.org/licenses/LICENSE-2.0
~
~ Unless required by applicable law or agreed to in writing, software
~ distributed under the License is distributed on an "AS IS" BASIS,
~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
~ See the License for the specific language governing permissions and
~ limitations under the License.
-->
<project xmlns="http://maven.apache.org/POM/4.0.0" 
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>


    <groupId>au.net.zeus.pack200</groupId>
    <artifactId>Pack200</artifactId>
    <version>1.0.0</version>
    <packaging>jar</packaging>

    <name>PACK200</name>
    <description>Tool and library to compress and uncompress jar files using
    Pack200.  https://docs.oracle.com/javase/8/docs/technotes/guides/pack200/pack-spec.html
    </description>

    <properties>
        <github.repo.basename>pfirmstone</github.repo.basename>
        <gmaven.version>1.4</gmaven.version>
        <gmavenProviderSelection>2.0</gmavenProviderSelection>
        <junit.version>4.8.2</junit.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    </properties>
    <dependencies>  
	<dependency>
            <groupId>org.ow2.asm</groupId>
            <artifactId>asm</artifactId>
            <version>7.3.1</version>
            <!--<version>5.0.1</version>-->
	    <type>jar</type>
	</dependency>   
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>  
            <plugin>
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-jar-plugin</artifactId>
              <version>2.6</version>
              <configuration>
                  <useDefaultManifestFile>true</useDefaultManifestFile>
                  <archive>
                      <manifestEntries>
                          <Main-Class>au.net.zeus.util.jar.pack.Driver</Main-Class>
                      </manifestEntries>
                  </archive>
              </configuration>
            </plugin>
            <plugin>
              <groupId>biz.aQute.bnd</groupId>
              <artifactId>bnd-maven-plugin</artifactId>
              <version>5.0.0</version>
              <executions>
                    <execution>
                        <goals>
                            <goal>bnd-process</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>       
            <plugin>
                <groupId>org.owasp</groupId>
                <artifactId>dependency-check-maven</artifactId>
                <version>5.3.0</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>2.1.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                        <source>11</source>
                        <target>11</target>
                        <optimize>true</optimize>
                        <encoding>UTF-8</encoding>
                        <meminitial>128m</meminitial>
                        <maxmem>1024m</maxmem>
                    </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.2</version>
            </plugin>
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <configuration>
                    <descriptors>
                        <descriptor>assembly.xml</descriptor>
                    </descriptors>
                </configuration>
                <executions>
                    <execution>
                        <id>make-assembly</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <!-- for publishing maven site to gh-pages : begin -->
      <plugin>
        <artifactId>maven-site-plugin</artifactId>
        <version>3.6</version>
        <configuration>
          <!-- we use maven-scm-publish-plugin to deploy the site to gh-pages branch, so skip maven-site-plugin deploy. -->
          <skipDeploy>true</skipDeploy>
        </configuration>
        <executions>
          <execution>
            <!-- ensure 'staging' site tree exists before attempt to deploy site. -->
            <id>stage-for-scm-publish</id>
            <phase>post-site</phase>
            <goals>
              <goal>stage</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <artifactId>maven-scm-publish-plugin</artifactId>
        <version>1.1</version>
        <configuration>
          <!-- This is important for git, gh-pages. -->
          <scmBranch>gh-pages</scmBranch>
        </configuration>
        <executions>
          <execution>
            <id>scm-publish</id>
            <phase>site-deploy</phase>
            <goals>
              <goal>publish-scm</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <!-- for publishing maven site to gh-pages : end -->
        </plugins>
    </build>

    <reporting>
        <plugins>
             <plugin>
              <artifactId>maven-javadoc-plugin</artifactId>
              <version>2.10.4</version>
              <configuration>
                <links>
                  <link>https://docs.oracle.com/javase/8/docs/api/</link>
                </links>
                <detectLinks>true</detectLinks>
                <breakiterator>true</breakiterator>
                <top><![CDATA[<h2>JGDMS Project ${project.version} API Documentation</h2>]]></top>
                <footer><![CDATA[<i>Copyright &copy;, multiple authors.</i>]]></footer>
              </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>findbugs-maven-plugin</artifactId>
                <version>3.0.5</version>
                <configuration>
                    <excludeFilterFile>findbugs-exclude-filter.xml</excludeFilterFile>
                </configuration>
            </plugin>
        </plugins>
    </reporting>
</project>
